build: produce standalone fat jar for java -jar execution
sbt-assembly was already configured; name the artifact binocular.jar and
add a bin/binocular launcher so the oracle run daemon, Bifrost relay
watchtower, and all other CLI commands can run without sbt. The launcher
adds --sun-misc-unsafe-memory-access=allow on JDK 23+ (required for
Scalus' sun.misc.Unsafe use) and is overridable via BINOCULAR_JAR/JAVA/
JAVA_OPTS. Document the jar workflow in the README and bump the documented
JDK requirement to 25 (JDK 23+).